# Aganitha_takehome

./: README.md  __init__.py  cli.py  fetch.py  filter.py  pyproject.toml  results.csv
