[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend project"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "pubmed_fetcher"}]

[tool.poetry.scripts]
get-papers-list = "cli:main"


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
pandas = "^2.0"
click = "^8.1"
openai = "^1.65.4"
google-generativeai = "^0.8.4"
g4f = "^0.4.8.0"
